feat(expansion-panel): Add Expansion Panel component
closes #46

--- a/demos/index.html
+++ b/demos/index.html
@@ -87,6 +87,13 @@
               <span class="mdc-list-item__secondary-text">Shadow for different elevations</span>
             </span>
           </a>
+          <a href="expansion-panel.html" role="listitem" class="mdc-list-item">
+            <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="/images/ic_expand_more_black_24px.svg" /></span>
+            <span class="mdc-list-item__text">
+              Expansion Panel
+              <span class="mdc-list-item__secondary-text">Summary and details</span>
+            </span>
+          </a>
           <a href="fab.html" role="listitem" class="mdc-list-item">
             <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="/images/ic_button_24px.svg" /></span>
             <span class="mdc-list-item__text">
