--- a/demos/fab.html
+++ b/demos/fab.html
@@ -196,6 +196,16 @@
               </span>
             </button>
           </figure>
+          <figure>
+            <button class="mdc-fab mdc-fab--fling material-icons" aria-label="Favorite" data-demo-no-js>
+              <span class="mdc-fab__icon .mdc-fab--fling__icon">
+                add
+              </span>
+              <span class="mdc-fab__icon .mdc-fab--fling--expanded__icon">
+                dashboard
+              </span>
+            </button>
+          </figure>
         </div>
       </section>
       <section>
